--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -6,7 +6,9 @@
         "id": "N09X5wKjBIsT"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/denisabrantesredis/denisd-GenAI-Workshop/blob/main/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
+        "<a href=\"https://colab.research.google.com/github/denisabrantesredis/denisd-GenAI-Workshop/blob/main/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb\" target=\"_newt\">\n",
+        "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
       ]
     },
     {
