--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -421,6 +421,7 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import redis\n",
         "from google.colab import userdata\n",
         "\n",
         "os.environ[\"PYDANTIC_SKIP_VALIDATING_CORE_SCHEMAS\"] = \"True\"\n",
