--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -421,6 +421,7 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import time\n",
         "import redis\n",
         "from google.colab import userdata\n",
         "\n",
@@ -605,8 +606,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "ids = vector_store.add_texts(texts, metadata)"
+        "timer_start = time.perf_counter()\n",
+        "ids = vector_store.add_texts(texts, metadata)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
