patch redisvl package

--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -733,8 +733,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "results = vector_store.similarity_search_with_score(query)"
+        "timer_start = time.perf_counter()\n",
+        "results = vector_store.similarity_search_with_score(query)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -961,8 +964,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -1073,8 +1079,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "result_nodes = vector_store.similarity_search_with_score(query)"
+        "timer_start = time.perf_counter()\n",
+        "result_nodes = vector_store.similarity_search_with_score(query)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -1162,8 +1171,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -1244,8 +1256,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -1344,8 +1359,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
@@ -1486,8 +1504,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
