--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -77,6 +77,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# patch an issue with RedisVL\n",
+        "!wget https://github.com/denisabrantesredis/denisd-GenAI-Workshop/raw/refs/heads/main/_assets/files/semantic.py\n",
+        "!rm /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/semantic.py\n",
+        "!cp semantic.py /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "L7_A4sOeDfqt"
