--- a/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
+++ b/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb
@@ -1636,8 +1636,11 @@
       },
       "outputs": [],
       "source": [
-        "%%timeit\n",
-        "llm_response = llm.invoke(messages)"
+        "timer_start = time.perf_counter()\n",
+        "llm_response = llm.invoke(messages)\n",
+        "timer_end = time.perf_counter()\n",
+        "total_time = round(timer_end - timer_start, 4)\n",
+        "print(f\"Total Time: {total_time}s\")"
       ]
     },
     {
