--- a/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
+++ b/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
@@ -18,17 +18,33 @@
         "id": "MvZnhXr0L3K3"
       },
       "source": [
-        "# Setup Redis Workshop\n",
+        "<div style=\"display:flex;width=100%;\">\n",
+        "<img src=\"https://redis.io/wp-content/uploads/2024/04/Logotype.svg?auto=webp&quality=85,75&width=120\" alt=\"Redis\" width=\"90\"/>\n",
+        "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\n",
+        "<img src=\"https://www.gstatic.com/devrel-devsite/prod/v0e0f589edd85502a40d78d7d0825db8ea5ef3b99ab4070381ee86977c9168730/cloud/images/cloud-logo.svg\" alt=\"Google Cloud\" width=\"140\"/>\n",
+        "</div>\n",
         "\n",
-        "![Redis](https://redis.io/wp-content/uploads/2024/04/Logotype.svg?auto=webp&quality=85,75&width=120)\n",
-        "\n",
-        "This notebook, as most of the notebooks in this series are designed to run either with build-in RedisStack or Redis Cloud.\n",
+        "# Setting up Redis Connection\n",
         "\n",
         "To provision free forever instance of Redis Cloud:\n",
         "- Head to https://redis.io/try-free/\n",
         "- Register with email/gmail\n",
         "- Create an **Essentials** subscription with 30MB free tier (no credit card required)\n",
         "- Create RedisStack Database"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/redis_gcp.png?raw=true\" alt=\"Redis and Google Cloud\" align=\"center\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Installing the Pre-Reqs"
       ]
     },
     {
@@ -43,8 +59,7 @@
       },
       "outputs": [],
       "source": [
-        "# Install the requirements\n",
-        "!pip install -q redis"
+        "!pip install -q redis==5.0.8 >> /.tmp"
       ]
     },
     {
@@ -54,9 +69,8 @@
         "id": "yO8o80_fM5cG"
       },
       "source": [
-        "### Install Redis Stack locally\n",
-        "\n",
-        "This installs the Redis Stack database for local usage if you cannot or do not want to create a Redis Cloud database, and it installs the `redis-cli` that will be used for checking database connectivity, etc. "
+        "## Installing Redis Stack Locally\n",
+        "If you are not using Redis Cloud as a database, uncomment and run the code below to install Redis locally. Then set your connection to 127.0.0.1"
       ]
     },
     {
@@ -71,12 +85,12 @@
       },
       "outputs": [],
       "source": [
-        "%%sh\n",
-        "curl -fsSL https://packages.redis.io/gpg | sudo gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg \n",
-        "echo \"deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main\" | sudo tee /etc/apt/sources.list.d/redis.list \n",
-        "sudo apt-get update  > /dev/null 2>&1\n",
-        "sudo apt-get install redis-stack-server  > /dev/null 2>&1\n",
-        "redis-stack-server --daemonize yes \n"
+        "# %%sh\n",
+        "# curl -fsSL https://packages.redis.io/gpg | sudo gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg \n",
+        "# echo \"deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main\" | sudo tee /etc/apt/sources.list.d/redis.list \n",
+        "# sudo apt-get update  > /dev/null 2>&1\n",
+        "# sudo apt-get install redis-stack-server  > /dev/null 2>&1\n",
+        "# redis-stack-server --daemonize yes"
       ]
     },
     {
@@ -86,8 +100,25 @@
         "id": "pD9QIlpeKs3o"
       },
       "source": [
-        "### Setup Redis connection\n",
-        "***Note - Replace Redis connection values if using a Redis Cloud instance!***"
+        "### Setup Redis connection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import time\n",
+        "import redis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_secrets.png?raw=true\" alt=\"Callout - Use Google Colab secrets instead\"/>"
       ]
     },
     {
@@ -98,52 +129,28 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
+        "if \"GOOGLE_API_KEY\" not in os.environ:\n",
+        "    if userdata.get('GOOGLE_API_KEY'):\n",
+        "      os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
+        "    else:\n",
+        "      os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
         "\n",
-        "REDIS_HOST = os.getenv(\"REDIS_HOST\", \"localhost\")\n",
-        "REDIS_PORT = os.getenv(\"REDIS_PORT\", \"6379\")\n",
-        "REDIS_PASSWORD = os.getenv(\"REDIS_PASSWORD\", \"\")\n",
-        "# Replace values above with your own if using Redis Cloud instance\n",
-        "#REDIS_HOST=\"redis-18374.c253.us-central1-1.gce.cloud.redislabs.com\"\n",
-        "#REDIS_PORT=18374\n",
-        "#REDIS_PASSWORD=\"1TNxTEdYRDgIDKM2gDfasupCADXXXX\"\n",
-        "\n",
-        "# Shortcut for redis-cli $REDIS_CONN command\n",
-        "# If SSL is enabled on the endpoint add --tls\n",
-        "if REDIS_PASSWORD!=\"\":\n",
-        "  os.environ[\"REDIS_CONN\"]=f\"-h {REDIS_HOST} -p {REDIS_PORT} -a {REDIS_PASSWORD} --no-auth-warning\"\n",
+        "if userdata.get('REDIS_HOST'):\n",
+        "  REDIS_HOST = userdata.get('REDIS_HOST')\n",
         "else:\n",
-        "  os.environ[\"REDIS_CONN\"]=f\"-h {REDIS_HOST} -p {REDIS_PORT}\"\n",
+        "  REDIS_HOST=\"127.0.0.1\"\n",
         "\n",
-        "# If SSL is enabled on the endpoint, use rediss:// as the URL prefix\n",
-        "REDIS_URL = f\"redis://:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\"\n"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Mnyz8NjaNz8T"
-      },
-      "source": [
-        "### Basic Test with Redis CLI"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6FFP3eCRBTzk",
-        "outputId": "4b27822f-fd36-4392-cfb5-4edee6050c55"
-      },
-      "outputs": [],
-      "source": [
-        "!redis-cli $REDIS_CONN PING\n",
-        "!redis-cli $REDIS_CONN SET hello world\n",
-        "!redis-cli $REDIS_CONN GET hello"
+        "if userdata.get('REDIS_PORT'):\n",
+        "  REDIS_PORT = userdata.get('REDIS_PORT')\n",
+        "else:\n",
+        "  REDIS_PORT=12000\n",
+        "\n",
+        "if userdata.get('REDIS_PASSWORD'):\n",
+        "  REDIS_PASSWORD = userdata.get('REDIS_PASSWORD')\n",
+        "else:\n",
+        "  REDIS_PASSWORD=\"password\"\n",
+        "\n",
+        "REDIS_URL = f\"redis://default:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\""
       ]
     },
     {
@@ -153,7 +160,14 @@
         "id": "CXEoNDpHN5WU"
       },
       "source": [
-        "### Basic Test with Python client"
+        "### Testing Redis Connection"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_connection.png?raw=true\" alt=\"Callout - Make sure connection works\"/>"
       ]
     },
     {
@@ -168,15 +182,12 @@
       },
       "outputs": [],
       "source": [
-        "import redis\n",
+        "r = redis.from_url(REDIS_URL)\n",
         "\n",
-        "r = redis.Redis(\n",
-        "  host=REDIS_HOST,\n",
-        "  port=REDIS_PORT,\n",
-        "  password=REDIS_PASSWORD\n",
-        ")\n",
-        "\n",
-        "r.get(\"hello\")"
+        "if r.ping():\n",
+        "    print(\"Connection successful!\")\n",
+        "else:\n",
+        "    print(\"Connection issue!\")"
       ]
     },
     {
@@ -203,8 +214,6 @@
       },
       "outputs": [],
       "source": [
-        "import time\n",
-        "\n",
         "r.set(name=\"ttl_key\", value=\"this key will expire soon\", ex=10)\n",
         "\n",
         "for i in range(15):\n",
@@ -227,7 +236,7 @@
       "outputs": [],
       "source": [
         "###-- FLUSHDB will wipe out the entire database!!! Use with caution --###\n",
-        "# !redis-cli $REDIS_CONN flushdb"
+        "# r.flushdb()"
       ]
     }
   ],
