--- a/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
+++ b/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
@@ -8,7 +8,9 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/Redislabs-Solution-Architects/Redis-Workshops/blob/main/00-Setup/00-Setup_Redis_Workshops.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/denisabrantesredis/denisd-GenAI-Workshop/blob/main/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb\" target=\"_blank\">\n",
+        "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
       ]
     },
     {
