--- a/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
+++ b/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
@@ -6,7 +6,7 @@
         "id": "N09X5wKjBIsT"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/denisabrantesredis/denisd-GenAI-Workshop/blob/main/02-Vector_Similarity_Search/02.03_Redis_Langchain.ipynb\" target=\"_newt\">\n",
+        "<a href=\"https://colab.research.google.com/github/denisabrantesredis/denisd-GenAI-Workshop/blob/main/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb\" target=\"_newt\">\n",
         "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>"
       ]
