--- a/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
+++ b/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
@@ -113,7 +113,8 @@
       "source": [
         "import os\n",
         "import time\n",
-        "import redis"
+        "import redis\n",
+        "from google.colab import userdata"
       ]
     },
     {
