--- a/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
+++ b/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
@@ -41,9 +41,7 @@
         "id": "y8w5OAHNOlFf"
       },
       "source": [
-        "[Try a similar app with an always-on demo](https://antonum-redis-vss-streamlit-streamlit-app-p4z5th.streamlit.app/)\n",
-        "\n",
-        "In this notebook, we will build a RAG use case using data from a web page. Redis will be used as the Vector Database and Cache for our use case, while Google Gemini is the LLM that will help generate the answers to the user's questions."
+        "In this exercise, we will create a conversational chat bot using Google Gemini. We will use Redis to score the conversation history to provide the model with the necessary context."
       ]
     },
     {
@@ -69,18 +67,6 @@
         "!pip install -q langchain-core==0.3.6 >> /.tmp\n",
         "!pip install -q langchain-redis==0.0.4 >> /.tmp\n",
         "!pip install -q langchain-google-genai==2.0.0 >> /.tmp"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # patch an issue with RedisVL\n",
-        "# !wget https://github.com/denisabrantesredis/denisd-GenAI-Workshop/raw/refs/heads/main/_assets/files/semantic.py\n",
-        "# !rm /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/semantic.py\n",
-        "# !cp semantic.py /usr/local/lib/python3.10/dist-packages/redisvl/extensions/llmcache/"
       ]
     },
     {
@@ -187,7 +173,14 @@
         "id": "wYRtnOltmyC4"
       },
       "source": [
-        "In this step, we prepare a list of JSON objects contanining the data from our chunks. Here is where we can map the metadata fields we want to store in Redis to be used in hybrid searches. Notice how we are not generating the vectors manually as part of the step; this is fully automated by the Langchain package, based on the embedding model we've selected."
+        "A session identifier is needed to separate conversations per user (or session). We'll use the same Langchain package from the previous labs to orchestrate the conversation with the model. For this use case, we will use `RedisChatMessageHistory`to keep track of the conversation history between the user and the model."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_session2.png?raw=true\" alt=\"Callout - Session Identifier\"/>"
       ]
     },
     {
@@ -199,6 +192,13 @@
       "outputs": [],
       "source": [
         "user_session = \"default\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load the model"
       ]
     },
     {
@@ -217,6 +217,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "For this lab, we will keep the prompt very simple, and ensure that the conversation history is included with every interaction."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -229,6 +236,13 @@
         "    (\"human\", \"{input}\")\n",
         "])\n",
         "chain = prompt | llm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Using Redis to store conversation history is very simple; the storing and retrieval of conversation history is automatically handled by Langchain. For this lab, we're setting a Time-To-Live (TTL) of 3,600 seconds, or 1 hour."
       ]
     },
     {
@@ -258,6 +272,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_llmfunction.png?raw=true\" alt=\"Callout - LLM Function\"/>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -270,11 +291,27 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Part 2 - Talking to the Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Large Language Models do not keep track of the conversations they are having with users; each question is received (and answered) in a completely isolated way, with no context of previous interactions. However, behavior like this would make for very poor interactions, as users need to contextualize what they are trying to achieve, often across multiple interactions.\n",
+        "\n",
+        "In order to provide a better user experience, client UIs (like chatbots) often keep track of the previous interactions between users and models, and send this context to the model with every new question. That way, the model can 'read' the previous interactions and contextualize its response in a way that emulate a natural conversation between people."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "P6Y3Fy_JnSm5"
       },
       "source": [
-        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_save.png?raw=true\" alt=\"Callout - Saving to Redis\"/>"
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_1q.png?raw=true\" alt=\"Callout - First Question to the Model\"/>"
       ]
     },
     {
@@ -294,7 +331,7 @@
         "id": "i_j8oVZIzgvv"
       },
       "source": [
-        "List the IDs of all documents saved to Redis:"
+        "Send the question to the model and print the response"
       ]
     },
     {
@@ -341,18 +378,10 @@
         "id": "PxBu0RKZqu4t"
       },
       "source": [
-        "Open Redis Insight and confirm that all documents were generated. Notice how each document contains the vector that was automatically generated by the Langchain package. You may also notice that the vectors are not presented as a list; this is due to the fact that they are stored as binary strings, which is more efficient for retrieval and storage.\n",
+        "Open Redis Insight and you will find 2 new documents there, one for the question and one for the answeer.\n",
         "\n",
-        "You can also go to the **Workbench** and get a list of indexes using the command:\n",
+        "Notice the additional metadata, such as session identifier, timestamp, etc.\n",
         "\n",
-        "```\n",
-        "FT._list\n",
-        "```\n",
-        "\n",
-        "Finally, you can get more details about the index that was automatically generated by Langchain with this command:\n",
-        "```\n",
-        "FT.info \"idx:web\"\n",
-        "```\n",
         "&nbsp;\n",
         "\n",
         "&nbsp;"
@@ -364,7 +393,7 @@
         "id": "hS3kewVQvR8y"
       },
       "source": [
-        "### Running a Semantic Search"
+        "### Asking a follow-up session"
       ]
     },
     {
@@ -378,6 +407,13 @@
         "For more details on the different ways to run vector searches, check the [Langchain documentation page](https://python.langchain.com/docs/integrations/vectorstores/redis/#query-vector-store).\n",
         "\n",
         "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_2q.png?raw=true\" alt=\"Callout - Follow-up Question to the Model\"/>"
       ]
     },
     {
@@ -397,7 +433,9 @@
         "id": "8FKaU45iwULg"
       },
       "source": [
-        "### Visualizing the search results with the score for each result"
+        "### Sending the follow-up question to the model\n",
+        "\n",
+        "Without the conversation history, the model would be confused with this new question, seeing as it would be missing the context from the previous interaction."
       ]
     },
     {
@@ -418,6 +456,34 @@
       "outputs": [],
       "source": [
         "Markdown(response)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_insight.png?raw=true\" alt=\"Callout - Check Redis Insight\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here's an interesting exercise: open Redis Insight and delete all documents. This will cause the model to get confused when we ask another follow-up question."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_3q.png?raw=true\" alt=\"Callout - Another Follow-up Question to the Model\"/>"
       ]
     },
     {
@@ -462,7 +528,7 @@
         "id": "UALXxSxHHugw"
       },
       "source": [
-        "## Part 5: Using a LLM"
+        "## Part 3: Behind the Scenes"
       ]
     },
     {
@@ -480,7 +546,7 @@
         "id": "x3UgzWI31G6P"
       },
       "source": [
-        "### Step 1: Load the Model"
+        "#### Looking at the Message History"
       ]
     },
     {
@@ -492,6 +558,20 @@
       "outputs": [],
       "source": [
         "get_redis_history(user_session).messages"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Querying Redis Directly"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Since the conversation history is stored in Redis as documents, we can access them directly for other use cases (for instance, a call center that wants to review the interaction between user and model, or a data sciences team gathering data to fine-tune a conversational model)."
       ]
     },
     {
@@ -530,6 +610,29 @@
         "\n",
         "&nbsp;\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Important\n",
+        "\n",
+        "Redis can be used as Vector Database, Semantic Cache and LLM Memory in the same use case; This allows for much faster interactions and an overall better user experience."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/diagram_redis_cache_llm.png?raw=true\" alt=\"Diagram - Redis as Semantic Cache and LLM Memory\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "&nbsp;"
       ]
     },
     {
