--- a/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
+++ b/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
@@ -1191,7 +1191,7 @@
         "id": "tv75yqFrAqry"
       },
       "source": [
-        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_threshold.png?raw=true\" alt=\"Callout - Semantic Threshold\"/>"
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_selectimage.png?raw=true\" alt=\"Callout - Select Image for Vector Search\"/>"
       ]
     },
     {
@@ -1202,8 +1202,7 @@
       },
       "outputs": [],
       "source": [
-        "redis_cache = RedisSemanticCache(redis_url=REDIS_URL, embeddings=embeddings, distance_threshold=0.2)\n",
-        "set_llm_cache(redis_cache)"
+        "search_image = test_images[3]"
       ]
     },
     {
@@ -1212,7 +1211,7 @@
         "id": "pv6nR-AFBEVZ"
       },
       "source": [
-        "Since the Semantic Cache is new, it will be empty. We will ask the original question first, to generate the cache entry:"
+        "Next, since we're not leveraging the Langchain package, we need to manually generate the vector for the search"
       ]
     },
     {
@@ -1223,7 +1222,8 @@
       },
       "outputs": [],
       "source": [
-        "query = \"How does Redis Insight make RDI simpler?\""
+        "search_embedding = clip_embd.embed_image([search_image])\n",
+        "len(search_embedding[0])"
       ]
     },
     {
@@ -1232,7 +1232,7 @@
         "id": "EjeCV10VBMD8"
       },
       "source": [
-        "Prepare the prompt:"
+        "Run a vector search for similar images"
       ]
     },
     {
@@ -1243,7 +1243,7 @@
       },
       "outputs": [],
       "source": [
-        "messages = get_system_template(text_list, query)"
+        "search_results = vector_query(search_embedding)"
       ]
     },
     {
@@ -1252,7 +1252,7 @@
         "id": "uWKkgnnoBO-d"
       },
       "source": [
-        "Invoke the model (it will cause a cache miss):"
+        "Print the results. Keep an eye on the similarity score: higher scores will display images with less similarity"
       ]
     },
     {
@@ -1263,11 +1263,31 @@
       },
       "outputs": [],
       "source": [
-        "timer_start = time.perf_counter()\n",
-        "llm_response = llm.invoke(messages)\n",
-        "timer_end = time.perf_counter()\n",
-        "total_time = round(timer_end - timer_start, 4)\n",
-        "print(f\"Total Time: {total_time}s\")"
+        "plt.figure(figsize=(12, 5))\n",
+        "i = 0\n",
+        "image = Image.open(search_image).convert(\"RGB\")\n",
+        "plt.subplot(4, 5, i+1)\n",
+        "plt.imshow(image)\n",
+        "label = \"Original Image\"\n",
+        "plt.xlabel(label, fontsize=8)\n",
+        "plt.xticks([])\n",
+        "plt.yticks([])\n",
+        "i = i + 1\n",
+        "for result in search_results:\n",
+        "    this_doc = result.__dict__\n",
+        "    image_path = this_doc['filename']\n",
+        "\n",
+        "    image = Image.open(image_path).convert(\"RGB\")\n",
+        "\n",
+        "    plt.subplot(4, 5, i+1)\n",
+        "    plt.imshow(image)\n",
+        "    label = f\"Score: {round(float(this_doc['vector_score']),2)}\\n{this_doc['id']}\\n{this_doc['color']}\\n{image_path}\"\n",
+        "    plt.xlabel(label, fontsize=8)\n",
+        "    plt.xticks([])\n",
+        "    plt.yticks([])\n",
+        "    i = i + 1\n",
+        "\n",
+        "plt.tight_layout()"
       ]
     },
     {
@@ -1276,7 +1296,7 @@
         "id": "--0PfUm1BUa8"
       },
       "source": [
-        "Print the response:"
+        "### Run a Hybrid search, looking for similar products where the color is Red"
       ]
     },
     {
@@ -1287,140 +1307,54 @@
       },
       "outputs": [],
       "source": [
-        "llm_response.content"
+        "new_results = vector_query_by_color(search_embedding, 'Red')"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "SNVN4Q2MBYOQ"
-      },
+      "metadata": {},
+      "source": [
+        "Print the new results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.figure(figsize=(12, 5))\n",
+        "i = 0\n",
+        "image = Image.open(search_image).convert(\"RGB\")\n",
+        "plt.subplot(4, 5, i+1)\n",
+        "plt.imshow(image)\n",
+        "label = \"Original Image\"\n",
+        "plt.xlabel(label, fontsize=8)\n",
+        "plt.xticks([])\n",
+        "plt.yticks([])\n",
+        "i = i + 1\n",
+        "for result in new_results:\n",
+        "    this_doc = result.__dict__\n",
+        "    image_path = this_doc['filename']\n",
+        "\n",
+        "    image = Image.open(image_path).convert(\"RGB\")\n",
+        "\n",
+        "    plt.subplot(4, 5, i+1)\n",
+        "    plt.imshow(image)\n",
+        "    label = f\"Score: {round(float(this_doc['vector_score']),2)}\\n{this_doc['id']}\\n{this_doc['color']}\\n{image_path}\"\n",
+        "    plt.xlabel(label, fontsize=8)\n",
+        "    plt.xticks([])\n",
+        "    plt.yticks([])\n",
+        "    i = i + 1\n",
+        "\n",
+        "plt.tight_layout()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "&nbsp;"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xoqlHw8DO0zL"
-      },
-      "source": [
-        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_insight.png?raw=true\" alt=\"Callout - Check Redis Insight\"/>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PoO1iZmVO1zW"
-      },
-      "source": [
-        "A new Hash document will appear in Redis, with a key prefix of `llmcache`. This is the cached prompt, which includes the question and the answer. The `invoke` function will run a semantic search for these documents, to look for similar questions."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cDfgdGQnO_ci"
-      },
-      "source": [
-        "&nbsp;"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o3iZspjDQc_b"
-      },
-      "source": [
-        "#### Ask a similar question to trigger a cache hit"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "E1dac3x9QV-h"
-      },
-      "outputs": [],
-      "source": [
-        "query = \"What does Redis Insight do to make RDI simpler?\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "p5WV9CfJBedI"
-      },
-      "source": [
-        "Prepare the prompt:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "X6ekUthmQXVh"
-      },
-      "outputs": [],
-      "source": [
-        "messages = get_system_template(text_list, query)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "b1Syj2_WBgTC"
-      },
-      "source": [
-        "Invoke the model:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XNeUsew8QXSu"
-      },
-      "outputs": [],
-      "source": [
-        "timer_start = time.perf_counter()\n",
-        "llm_response = llm.invoke(messages)\n",
-        "timer_end = time.perf_counter()\n",
-        "total_time = round(timer_end - timer_start, 4)\n",
-        "print(f\"Total Time: {total_time}s\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "e78ba7Y5Bi66"
-      },
-      "source": [
-        "Print the response:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "tt_hlPsRQXQE"
-      },
-      "outputs": [],
-      "source": [
-        "llm_response.content"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lAVzG-35N0JI"
-      },
-      "source": [
-        "&nbsp;\n",
-        "\n",
-        "\n",
-        "&nbsp;\n",
-        "\n"
       ]
     },
     {
