--- a/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
+++ b/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
@@ -194,6 +194,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_insight.png?raw=true\" alt=\"Callout - Check Redis Insight\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This is a good opportunity to open Redis Insight and create a connection to your database.\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
