--- a/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
+++ b/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
@@ -591,12 +591,125 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "r = redis.Redis(host=redis_host, port=redis_port, username=redis_user, password=redis_pw, decode_responses=True)\n",
+        "r = redis.from_url(REDIS_URL)\n",
         "\n",
         "if r.ping():\n",
         "    print(\"Connection successful!\")\n",
         "else:\n",
         "    print(\"Connection issue!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Run a Search for documents that contain the word 'city'. Because of [stemming](https://redis.io/docs/latest/develop/interact/search-and-query/advanced-concepts/stemming/), the response will include question and answer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def run_search(keyword):\n",
+        "  try:\n",
+        "    result = r.ft(\"idx:chat_history\").search(f'@content:{keyword}').docs\n",
+        "  except Exception as e:\n",
+        "    result = f\"Error: {e}\"\n",
+        "\n",
+        "  return result"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results = run_search(\"city\")\n",
+        "for result in results:\n",
+        "  print(result.json)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Render conversation history in HTML format"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "from datetime import datetime\n",
+        "from IPython.display import HTML"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "messages = []\n",
+        "for result in results:\n",
+        "  jsondoc = json.loads(result.json)\n",
+        "  msg_from = jsondoc[\"type\"]\n",
+        "  msg_content = jsondoc[\"data\"][\"content\"]\n",
+        "  ts = jsondoc['timestamp']\n",
+        "  msg_ts = datetime.utcfromtimestamp(ts).strftime('%Y-%m-%d %H:%M:%S')\n",
+        "  \n",
+        "  message = {\n",
+        "      \"from\" : msg_from,\n",
+        "      \"timestamp\" : msg_ts,\n",
+        "      \"content\" : msg_content\n",
+        "  }\n",
+        "\n",
+        "  messages.append(message)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "html_start = \"\"\"\n",
+        "<html><body>\n",
+        "<table style='border:1px solid gray;padding:2px;float:left;'>\n",
+        "    <tr>\n",
+        "      <th style='text-align:center;'>From</th>\n",
+        "      <th style='text-align:center;'>Timestamp</th>\n",
+        "      <th style='text-align:center;'>Content</th>\n",
+        "  </tr>\n",
+        "\"\"\"\n",
+        "html_body = \"\"\n",
+        "for message in messages:\n",
+        "  html_body += f\"\"\"\n",
+        "    <tr style='border:1px solid gray;padding:2px;'>\n",
+        "        <td style='text-align:center;width:10%;'>{message['from']}</td>\n",
+        "        <td style='text-align:center;width:20%;'>{message['timestamp']}</td>\n",
+        "        <td style='text-align:left;width:70%;'>{message['content']}</td>\n",
+        "    </tr>\n",
+        "  \"\"\"\n",
+        "html_end = \"\"\"\n",
+        "</table></body></html>\n",
+        "\"\"\"\n",
+        "html_full = html_start + html_body + html_end"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "HTML(html_full)"
       ]
     },
     {
