--- a/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
+++ b/Labs/02-LLM/02_Redis_Gemini_LLM.ipynb
@@ -61,12 +61,33 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install -q sentence-transformers==3.0.1 >> /.tmp\n",
         "!pip install -q redis==5.0.8 >> /.tmp\n",
         "!pip install -q langchain==0.2.16 >> /.tmp\n",
         "!pip install -q langchain-core==0.3.6 >> /.tmp\n",
         "!pip install -q langchain-redis==0.0.4 >> /.tmp\n",
         "!pip install -q langchain-google-genai==2.0.0 >> /.tmp"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Installing Redis Stack Locally\n",
+        "If you are not using Redis Cloud as a database, uncomment and run the code below to install Redis locally. Then set your connection to 127.0.0.1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# %%sh\n",
+        "# curl -fsSL https://packages.redis.io/gpg | sudo gpg --dearmor -o /usr/share/keyrings/redis-archive-keyring.gpg \n",
+        "# echo \"deb [signed-by=/usr/share/keyrings/redis-archive-keyring.gpg] https://packages.redis.io/deb $(lsb_release -cs) main\" | sudo tee /etc/apt/sources.list.d/redis.list \n",
+        "# sudo apt-get update  > /dev/null 2>&1\n",
+        "# sudo apt-get install redis-stack-server  > /dev/null 2>&1\n",
+        "# redis-stack-server --daemonize yes"
       ]
     },
     {
@@ -134,26 +155,25 @@
       },
       "outputs": [],
       "source": [
-        "if \"GOOGLE_API_KEY\" not in os.environ:\n",
-        "    if userdata.get('GOOGLE_API_KEY'):\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
-        "    else:\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
+        "try:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
+        "except:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
         "\n",
-        "if userdata.get('REDIS_HOST'):\n",
+        "try:\n",
         "  REDIS_HOST = userdata.get('REDIS_HOST')\n",
-        "else:\n",
+        "except:\n",
         "  REDIS_HOST=\"127.0.0.1\"\n",
         "\n",
-        "if userdata.get('REDIS_PORT'):\n",
+        "try:\n",
         "  REDIS_PORT = userdata.get('REDIS_PORT')\n",
-        "else:\n",
-        "  REDIS_PORT=12000\n",
+        "except:\n",
+        "  REDIS_PORT=6379\n",
         "\n",
-        "if userdata.get('REDIS_PASSWORD'):\n",
+        "try:\n",
         "  REDIS_PASSWORD = userdata.get('REDIS_PASSWORD')\n",
-        "else:\n",
-        "  REDIS_PASSWORD=\"password\"\n",
+        "except:\n",
+        "  REDIS_PASSWORD=\"\"\n",
         "\n",
         "REDIS_URL = f\"redis://default:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\""
       ]
