--- a/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
+++ b/Labs/03-RAG_Images/03_Redis_RAG_Images.ipynb
@@ -227,26 +227,25 @@
       },
       "outputs": [],
       "source": [
-        "if \"GOOGLE_API_KEY\" not in os.environ:\n",
-        "    if userdata.get('GOOGLE_API_KEY'):\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
-        "    else:\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
+        "try:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
+        "except:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
         "\n",
-        "if userdata.get('REDIS_HOST'):\n",
+        "try:\n",
         "  REDIS_HOST = userdata.get('REDIS_HOST')\n",
-        "else:\n",
+        "except:\n",
         "  REDIS_HOST=\"127.0.0.1\"\n",
         "\n",
-        "if userdata.get('REDIS_PORT'):\n",
+        "try:\n",
         "  REDIS_PORT = userdata.get('REDIS_PORT')\n",
-        "else:\n",
-        "  REDIS_PORT=12000\n",
+        "except:\n",
+        "  REDIS_PORT=6379\n",
         "\n",
-        "if userdata.get('REDIS_PASSWORD'):\n",
+        "try:\n",
         "  REDIS_PASSWORD = userdata.get('REDIS_PASSWORD')\n",
-        "else:\n",
-        "  REDIS_PASSWORD=\"password\"\n",
+        "except:\n",
+        "  REDIS_PASSWORD=\"\"\n",
         "\n",
         "REDIS_URL = f\"redis://default:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\""
       ]
@@ -299,18 +298,6 @@
       "metadata": {},
       "source": [
         "This lab can greatly benefit from running on a T4 GPU. However, seeing as GPUs are not guaranteed in the free tier, the lab was designed to also run on CPUs, albeit slower."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FCjcJIrsGlqI"
-      },
-      "outputs": [],
-      "source": [
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "device"
       ]
     },
     {
@@ -648,6 +635,13 @@
       "metadata": {},
       "source": [
         "This can take several minutes, as the model needs to be downloaded. Also, keep an eye on the memory usage for your notebook."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/denisabrantesredis/denisd-GenAI-Workshop/blob/main/_assets/images/callout_oom.png?raw=true\" alt=\"Callout - Out of Memory warning\"/>"
       ]
     },
     {
