--- a/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
+++ b/Labs/00-Setup/00-Setup_Redis_Workshops.ipynb
@@ -132,26 +132,25 @@
       },
       "outputs": [],
       "source": [
-        "if \"GOOGLE_API_KEY\" not in os.environ:\n",
-        "    if userdata.get('GOOGLE_API_KEY'):\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
-        "    else:\n",
-        "      os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
+        "try:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY')\n",
+        "except:\n",
+        "  os.environ[\"GOOGLE_API_KEY\"] = \"<insert API key here>\"\n",
         "\n",
-        "if userdata.get('REDIS_HOST'):\n",
+        "try:\n",
         "  REDIS_HOST = userdata.get('REDIS_HOST')\n",
-        "else:\n",
+        "except:\n",
         "  REDIS_HOST=\"127.0.0.1\"\n",
         "\n",
-        "if userdata.get('REDIS_PORT'):\n",
+        "try:\n",
         "  REDIS_PORT = userdata.get('REDIS_PORT')\n",
-        "else:\n",
-        "  REDIS_PORT=12000\n",
+        "except:\n",
+        "  REDIS_PORT=6379\n",
         "\n",
-        "if userdata.get('REDIS_PASSWORD'):\n",
+        "try:\n",
         "  REDIS_PASSWORD = userdata.get('REDIS_PASSWORD')\n",
-        "else:\n",
-        "  REDIS_PASSWORD=\"password\"\n",
+        "except:\n",
+        "  REDIS_PASSWORD=\"\"\n",
         "\n",
         "REDIS_URL = f\"redis://default:{REDIS_PASSWORD}@{REDIS_HOST}:{REDIS_PORT}\""
       ]
